--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.0",
+    "axios": "^0.24.0",
     "bootstrap": "^4.6.1",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
-    "vue-router": "^3.5.3"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
